모바일 환경 게시글 목록 화면에서 글번호 항목 삭제
제목이 덜 짤리게 수정

추가로, 품절 쿠팡 광고 수정했음

--- a/src/main/webapp/WEB-INF/views/include/postListContent.jspf
+++ b/src/main/webapp/WEB-INF/views/include/postListContent.jspf
@@ -11,7 +11,7 @@
                    <!-- 테이블 헤더 -->
                    <thead>
                        <tr>
-                           <th class="post-num" style="width: 10%;">번 호</th>
+                           <th class="post-num hide-on-mobile" style="width: 10%;">번 호</th>
                            <th style="title width: 56%;">제 &nbsp목</th>
                            <th class="writer hide-on-mobile" style="width: 10%;">작성자</th>
                            <th class="date hide-on-mobile" style="width: 10%;">날 짜</th>
@@ -23,7 +23,7 @@
                    <!-- 공지사항 목록 -->
                    <c:forEach var="notice" items="${selfNoticeList}">
                        <tr class="notice-tr">
-                           <td class="post-num">${notice.postNum}&nbsp;</td>
+                           <td class="post-num hide-on-mobile">${notice.postNum}&nbsp;</td>
                            <td class="title mobile-visible">
                                <span>[공지]</span>
                                <a class="noticeTitle" href="/boards/${boardTitle}/readPost?postNum=${notice.postNum}">${notice.title}</a>
@@ -38,7 +38,7 @@
                    <!-- 일반 게시물 목록 -->
                    <c:forEach var="post" items="${postList}">
                        <tr>
-                           <td class="post-num">${post.postNum}&nbsp;</td>
+                           <td class="post-num hide-on-mobile">${post.postNum}&nbsp;</td>
                            <td class="title mobile-visible">
                                <a class="postTitle" href="/boards/${boardTitle}/readPost?postNum=${post.postNum}">${post.title}</a>
                                <c:if test="${post.commentCount > 0}">( ${post.commentCount} )</c:if>
