폰트를 CDN처리하려다가 중지. 일단 커밋만 해둠
이전 커밋으로 리버트 예정

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'NeoDungGeunMo';
-    src: url('/fonts/neodgm.woff') format('woff');
+    src: url('//cdn.jsdelivr.net/gh/neodgm/neodgm-webfont@1.600/neodgm/style.css') format('woff');
 }
 body {
     min-height: 100vh;
