--- a/src/main/webapp/WEB-INF/views/include/header.jspf
+++ b/src/main/webapp/WEB-INF/views/include/header.jspf
@@ -8,8 +8,10 @@
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="/plugins/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/style.css">
-<link rel="preload" href="/fonts/neodgm.woff" as="font" type="font/woff" crossorigin="anonymous">
-<link rel="preload" href="/image/star_full.jpg" as="image">
+<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/neodgm/neodgm-webfont@1.600/neodgm/style.css">
+<link rel="preload" href="//cdn.jsdelivr.net/gh/neodgm/neodgm-webfont@1.600/neodgm/style.css" as="font"
+type="font/woff" crossorigin="anonymous">
+<link rel="preload" href="http://sc1hub.cdn1.cafe24.com/star_full.jpg" as="image">
 
 <style>
 .this-header {
