메뉴 이미지 누락본 수정 및 cdn링크 관련 경고 수정
mixed content 경고 수정처리

--- a/src/main/webapp/WEB-INF/views/include/header.jspf
+++ b/src/main/webapp/WEB-INF/views/include/header.jspf
@@ -2,6 +2,7 @@
 <%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
 <%@ taglib uri='http://java.sun.com/jsp/jstl/core' prefix='c'%>
 <meta charset="utf-8">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="스타크래프트1 전문 공략 사이트. 종족별 운영 및 전략 총정리">
 <link rel="canonical" href="${canonical}" />
