--- a/src/main/webapp/WEB-INF/views/include/modifyPostContent.jspf
+++ b/src/main/webapp/WEB-INF/views/include/modifyPostContent.jspf
@@ -13,7 +13,10 @@
         <textarea name="content" id="content">${post.content}</textarea><br>
 
         <script type="text/javascript">
-            CKEDITOR.replace('content', {filebrowserUploadUrl:'/imageUpload'});
+            CKEDITOR.replace('content', {
+                filebrowserUploadUrl:'/imageUpload',
+                customConfig: '/ckeditor/config.js'
+            });
         </script>
 
         <button class="pull-left btn btn-theme" accesskey="s">게시하기(S)</button>
