--- a/src/main/webapp/WEB-INF/views/include/writePostContent.jspf
+++ b/src/main/webapp/WEB-INF/views/include/writePostContent.jspf
@@ -9,9 +9,14 @@
         </c:if>
         <br>
         <textarea name="content" id="content"></textarea><br>
-        <script type="text/javascript">	// 글쓰기 editor 및 사진 업로드 기능
-            CKEDITOR.replace('content', {filebrowserUploadUrl:'/imageUpload'});
+
+        <script type="text/javascript">
+            CKEDITOR.replace('content', {
+                filebrowserUploadUrl:'/imageUpload',
+                customConfig: '/ckeditor/config.js'
+            });
         </script>
+
         <button class="pull-left btn btn-theme" accesskey="s">게시하기(S)</button>
         <button type="button" class="pull-left btn btn-theme" onclick="location.href='/boards/${boardTitle}'" accesskey="c">취소(C)</button>
     </form>
