CK에디터에서 html소스편집 기능 수정
소스편집 모드에서 글자색 안 보이던 것 수정
유튜브 링크 걸 수 있게 아이프레임 허용

호스팅 업데이트 완료

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -134,3 +134,7 @@ button.cancel-btn:hover {
 .btn {
     font-size: 20px;
 }
+textarea.cke_source {
+    font-family: "NeoDungGeunMo", sans-serif;
+    color: black;
+}
