글자 안 보이는 것 수정. 폰트 프로로 변경
둥근모 프로 폰트로 변경완료.
폰트색깔 누락된 것 수정 완료.

--- a/src/main/resources/static/css/postList.css
+++ b/src/main/resources/static/css/postList.css
@@ -33,6 +33,30 @@
 .views, .post-num, .recommend {
     text-align: right;
 }
+.sc-paging {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    gap: 8px;
+    margin-top: 10px;
+}
+.sc-paging__pages {
+    display: flex;
+    grid-column: 2;
+    justify-self: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 6px;
+}
+.sc-paging__nav {
+    white-space: nowrap;
+}
+.sc-paging__prev { justify-self: start; }
+.sc-paging__next { justify-self: end; }
+.sc-paging__page.is-current {
+    color: #75f94c;
+    border-color: #75f94c;
+}
 /* 모바일 환경에서 특정 열만 숨김 */
 @media screen and (max-width: 600px) {
     body .col-lg-3, body .col-lg-9, body.col-xs-12 {
