--- a/src/main/resources/static/css/readPost.css
+++ b/src/main/resources/static/css/readPost.css
@@ -1,6 +1,6 @@
 .post-title {
     padding: 0.5rem 0.75rem;
-    font-size: 20px;
+    font-size: 32px;
     font-weight: 400;
     border-color: #bbb;
 }
@@ -8,8 +8,8 @@
     padding: 0.35rem 0.75rem 0.3rem;
     border-bottom: 1px solid;
     border-color: #bbb;
-    font-size: 18px;
-    font-weight: 300;
+    font-size: 20px;
+    font-weight: 400;
     overflow: hidden;
 }
 .btn-right {
@@ -22,6 +22,12 @@
 }
 .recommend-div {
     text-align: center;
+}
+.post-content,
+.post-content * {
+    font-family: inherit !important;
+    font-weight: inherit !important;
+    font-style: inherit !important;
 }
 .post-content img {
     max-width: 100%;
