--- a/src/main/webapp/WEB-INF/views/include/coupangAd.jspf
+++ b/src/main/webapp/WEB-INF/views/include/coupangAd.jspf
@@ -9,5 +9,8 @@
     <a href="https://link.coupang.com/a/b4VXNW" target="_blank" referrerpolicy="unsafe-url"><img src="https://img1c.coupangcdn.com/image/affiliate/banner/1f6aa04ab0a6479bae7a907caeff1260@2x.jpg" alt="덱 프랑슘 거북선 블랙에디션 저소음 PBT 넌LED 유선 텐키리스 키보드, KBA-CBL-87XN, 저소음 적축" width="120" height="240"></a>
     <a href="https://link.coupang.com/a/bqU6LL" target="_blank" referrerpolicy="unsafe-url"><img src="https://image4.coupangcdn.com/image/affiliate/banner/b261a0b7064d9bf02050a4766eac60ad@2x.jpg" alt="빅트랙 베이직 게이밍 의자 A-01, 블랙 + 화이트" width="120" height="240"></a>
     <a href="https://link.coupang.com/a/bQTfGB" target="_blank" referrerpolicy="unsafe-url"><img src="https://image9.coupangcdn.com/image/affiliate/banner/71e1b09d6b7a01f6decbdae2880a31f2@2x.jpg" alt="스타크래프트: 진화, 제우미디어, 티모시 잔" width="120" height="240"></a>
-    <p style="color: #474747; margin: 0;">사이트 내 쿠팡 배너는 쿠팡 파트너스 활동의 일환으로, 이에 따른 일정액의 수수료를 제공받습니다.</p>
+</div>
+<div class="coupang-banner-text">
+    <p>사이트 내 쿠팡 배너는 쿠팡 파트너스 활동의 일환으로, 이에 따른 일정액의 수수료를 제공받습니다.</p>
+    <p>기왕 쿠팡 쇼핑하실거라면 해당 링크 이용해서 쇼핑해주시면 사이트 운영에 큰 도움이 됩니다!</p>
 </div>
