--- a/src/main/webapp/WEB-INF/views/include/footer.jspf
+++ b/src/main/webapp/WEB-INF/views/include/footer.jspf
@@ -1,6 +1,13 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<%@ taglib uri='http://java.sun.com/jsp/jstl/core' prefix='c'%>
 <style>
 </style>
+
+<div class="container">
+    <div class="row">
+        <%@include file="./coupangAd.jspf" %>
+    </div>
+</div>
 
 <footer class="footer text-center">
 	<div class="container">
@@ -14,12 +21,25 @@
 	</div>
 </footer>
 
-<div id="scTerminal" class="sc-terminal" aria-label="SC1Hub Terminal">
-    <div id="scTerminalOutput" class="sc-terminal__output" aria-live="polite"></div>
-    <div class="sc-terminal__prompt">
-        <span class="sc-terminal__label">선택&gt;</span>
-        <input id="scTerminalInput" class="sc-terminal__input" autocomplete="off" inputmode="text" placeholder="명령어 입력 (help)" aria-label="터미널 입력">
-        <span class="sc-terminal__cursor" aria-hidden="true">█</span>
+<div id="scMemberMeta"
+     data-logged-in="<c:out value='${not empty member}'/>"
+     data-id="<c:out value='${member.id}'/>"
+     data-nickname="<c:out value='${member.nickName}'/>"
+     data-grade="<c:out value='${member.grade}'/>"
+     hidden></div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div id="scTerminal" class="sc-terminal is-collapsed" aria-label="SC1Hub Terminal">
+                <div id="scTerminalOutput" class="sc-terminal__output" aria-live="polite"></div>
+                <div class="sc-terminal__prompt">
+                    <span class="sc-terminal__label">선택&gt;</span>
+                    <input id="scTerminalInput" class="sc-terminal__input" autocomplete="off" inputmode="text" placeholder="명령어 입력 (help)" aria-label="터미널 입력">
+                    <span class="sc-terminal__cursor" aria-hidden="true">█</span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -92,9 +112,15 @@
         };
         var pageUrl = pageMap[menuNumber];
         if (pageUrl) {
-            if (window.scTerminal && window.scTerminal.isPostUrl(pageUrl)) {
-                window.scTerminal.openPostFromUrl(pageUrl);
-                return;
+            if (window.scTerminal) {
+                if (window.scTerminal.isPostUrl && window.scTerminal.isPostUrl(pageUrl)) {
+                    window.scTerminal.openPostFromUrl(pageUrl);
+                    return;
+                }
+                if (window.scTerminal.isBoardUrl && window.scTerminal.isBoardUrl(pageUrl)) {
+                    window.scTerminal.openBoardFromUrl(pageUrl);
+                    return;
+                }
             }
             window.location.href = pageUrl;
         } else {
