--- a/src/main/webapp/WEB-INF/views/include/paging.jspf
+++ b/src/main/webapp/WEB-INF/views/include/paging.jspf
@@ -3,7 +3,7 @@
 <div class="sc-paging">
     <c:if test="${page.prevPageSetPoint >= 1}">
         <a class="sc-paging__nav sc-paging__prev btn btn-theme"
-           href="/boards/${boardTitle}/?recentPage=${page.prevPageSetPoint}&searchType=${page.searchType}&keyword=${page.keyword}">[이전]</a>
+           href="/boards/${boardTitle}/?recentPage=${page.prevPageSetPoint}">[이전]</a>
     </c:if>
 
     <div class="sc-paging__pages">
@@ -11,11 +11,11 @@
             <c:choose>
                 <c:when test="${countPage == page.recentPage}">
                     <a class="sc-paging__page btn btn-theme is-current"
-                       href="/boards/${boardTitle}/?recentPage=${countPage}&searchType=${page.searchType}&keyword=${page.keyword}">[${countPage}]</a>
+                       href="/boards/${boardTitle}/?recentPage=${countPage}">[${countPage}]</a>
                 </c:when>
                 <c:otherwise>
                     <a class="sc-paging__page btn btn-theme"
-                       href="/boards/${boardTitle}/?recentPage=${countPage}&searchType=${page.searchType}&keyword=${page.keyword}">[${countPage}]</a>
+                       href="/boards/${boardTitle}/?recentPage=${countPage}">[${countPage}]</a>
                 </c:otherwise>
             </c:choose>
         </c:forEach>
@@ -23,6 +23,6 @@
 
     <c:if test="${page.nextPageSetPoint <= page.totalPage}">
         <a class="sc-paging__nav sc-paging__next btn btn-theme"
-           href="/boards/${boardTitle}/?recentPage=${page.nextPageSetPoint}&searchType=${page.searchType}&keyword=${page.keyword}">[다음]</a>
+           href="/boards/${boardTitle}/?recentPage=${page.nextPageSetPoint}">[다음]</a>
     </c:if>
 </div>
